--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@ background: linear-gradient(to right, #1D2671, #C33764); /* W3C, IE 10+/ Edge, F
 </style>
 <body>
     <nav class="navbar navbar-dark bg-primary">
-        <h4>Dashboard</h4>
+        <h4>Dashboard Generator</h4>
         
       </nav>
 
