--- a/templates/chart.html
+++ b/templates/chart.html
@@ -2,126 +2,124 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <style>
-   
-   
+
+
 
 </style>
 
 <body>
 
-    
 
-      <nav class="navbar navbar-dark bg-primary">
-        <h5>Metrics Dashboard</h5>
+
+    <nav class="navbar navbar-dark bg-primary">
+        <h5 style="color:#ffff">Metrics Dashboard</h5>
         <span class="navbar-text">
-            <a class="btn btn-dark" href="/">panel</a>
-          </span>
-      </nav>
-      <br> 
+            <a class="btn btn-dark" href="/">Panel</a>
+        </span>
+    </nav>
+    <br>
     <div style="text-align: center;">
-       <h4> Metrics for Mode : {{mode}} & Lane : {{lane}}</h4>
-    </div>
-   
-<div class="body">
-
-    
-    <div class="row">
-       
         
-        <div class="col-lg-6">
-            <div id="unitMetric" class="chart" >
-            </div>
-        </div>
-        <div class="col-lg-3">
-            <div id="inFullMetric" class="chart">
-            </div>
-        </div>
-        <div class="col-lg-3">
-            <div id="onTimeMetric" class="chart">
-            </div>
-        </div>
+        <h6> Metrics for Mode : <span style="color: blue;">{{mode}}</span> & Lane : <span style="color: blue;">{{lane}}</span></h6>
     </div>
-   
-    
-</div>
+
+    <div class="body">
+
+
+        <div id="unitMetric" class="chart">
+        </div>
 
 
 </body>
 
 
-    <!-- D3.js -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<!-- D3.js -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+
+<script type="text/javascript">
+
+    var bar1 = {{ barJSON1 | safe}};
+    var bar2 = {{ barJSON2 | safe}};
+    var bar3 = {{ barJSON3 | safe}};
+    console.log(bar1,bar2,bar3)
+    bar2['xaxis']='x2'
+    bar2['yaxis']='y2'
+    bar3['xaxis']='x3'
+    bar3['yaxis']='y3'
+    var data=[bar1,bar2,bar3]
+    var layout = {
+            grid: { rows: 1, columns: 3, pattern: 'independent' ,},
+            showlegend: false,
+            xaxis: {
+                tickangle: -90
+            },
+            xaxis2: {
+                tickangle: -90
+            },
+            xaxis3: {
+                tickangle: -90
+            },
+            annotations: [{
+            text: "UNIT CHARGE METRIC",
+            font: {
+                size: 16,
+                color: 'blue',
+            },
+            showarrow: false,
+            align: 'center',
+            x: 0.05,
+            y: 1.1,
+            xref: 'paper',
+            yref: 'paper',
+        },
+        {
+            text: "IN FULL METRIC",
+            font: {
+                size: 16,
+                color: 'blue',
+            },
+            showarrow: false,
+            align: 'center',
+            x: 0.9,
+            y: 1.1,
+            xref: 'paper',
+            yref: 'paper',
+        },
+        {
+            text: "ON TIME METRIC",
+            font: {
+                size: 16,
+                color: 'blue',
+            },
+            showarrow: false,
+            align: 'center',
+            x: 0.5,
+            y: 1.1,
+            xref: 'paper',
+            yref: 'paper',
+        }
+        ]
+            
+        };
+   
+    Plotly.newPlot('unitMetric', data, layout, { displayModeBar: false, format: 'svg' });
     
 
-    <script type="text/javascript">
-        
-        var bar1 = {{barJSON1 | safe}};
-        var bar2 = {{barJSON2 | safe}};
-        var bar3 = {{barJSON3 | safe}};
-        var layout = {
-        
-        title: 'UNIT COST METRICS',
-        font:{
-            family: 'Raleway, sans-serif'
-        },
-        showlegend: false,
-        xaxis: {
-            tickangle: 0
-        },
-        yaxis: {
-            zeroline: false,
-            gridwidth: 1
-        },
-        bargap :0.5
-        };
+</script>
 
-        var layout1 = {
-        
-        title: 'IN FULL METRICS',
-        font:{
-            family: 'Raleway, sans-serif'
-        },
-        showlegend: false,
-        xaxis: {
-            tickangle: -45
-        },
-        yaxis: {
-            zeroline: false,
-            gridwidth: 1
-        },
-        bargap :0.5
-        };
-        var layout2 = {
-        
-        title: 'ON TIME METRICS',
-        font:{
-            family: 'Raleway, sans-serif'
-        },
-        showlegend: false,
-        xaxis: {
-            tickangle: -45
-        },
-        yaxis: {
-            zeroline: false,
-            gridwidth: 1
-        },
-        bargap :0.5
-        };
-      
-
-        
-       
-        Plotly.newPlot('unitMetric',bar1,layout,{displayModeBar: false,format: 'webp'});  
-        Plotly.newPlot('inFullMetric',bar2,layout1,{displayModeBar: false});
-        Plotly.newPlot('onTimeMetric',bar3,layout2,{displayModeBar: false});
-        
-    </script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 
 </html>
