--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <div style="padding-top: 5%; padding-left: 25%">
-            <div class="card text-center" style="width: 30rem;">
+            <div class="card text-center" style="width: 60%">
 
                 <div class="card-body">
                     <div class="row" style="padding: 10px; align-content: center;">
